--- a/style-inicio.css
+++ b/style-inicio.css
@@ -186,7 +186,7 @@ main {
   }
 
   main {
-    padding-top: 120px; /* Ajustar o padding superior para evitar sobreposição */
+    padding-top: 120px;
   }
 
   .intro {
