--- a/assets/css/style-contato.css
+++ b/assets/css/style-contato.css
@@ -1,10 +1,13 @@
-body {
+body,
+html {
   margin: 0;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
   background-color: #f8f8f8;
+  scroll-behavior: smooth;
 }
 
+/* Estilos para o cabeçalho */
 header {
   display: flex;
   justify-content: space-between;
@@ -120,23 +123,7 @@ main {
   background-color: #e85a75;
 }
 
-.contact-details {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.contact-details h2 {
-  color: #ff6f8e;
-  font-family: "Times New Roman", serif;
-  margin-bottom: 10px;
-}
-
-.contact-details p {
-  margin-bottom: 5px;
-}
-
 /* CSS MODAL */
-
 .modal {
   display: none;
   position: fixed;
@@ -158,7 +145,6 @@ main {
   max-width: 600px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  position: relative;
 }
 
 .close {
@@ -173,4 +159,28 @@ main {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* FOOTER */
+footer {
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+  border-top: 1px solid #ccc;
+  margin-top: 20px;
+}
+
+.contact-details {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.contact-details h2 {
+  color: #ff6f8e;
+  font-family: "Times New Roman", serif;
+  margin-bottom: 10px;
+}
+
+.contact-details p {
+  margin-bottom: 5px;
 }
